--- a/report/src/report.tex
+++ b/report/src/report.tex
@@ -104,9 +104,6 @@ n, verify the percentage of graphs on n vertices that can be decomposed in the p
 Similarly, you can also consider other classes of graphs, say small bipartite graphs, trees, . . .
 
 
-
-
-
 \section{Uvod}
 
 Osnovni predmet obravnave tega dela bodo \emph{multigrafi}, ki lahko vzporedne povezave, nimajo pa zank. Grafu brez podvojenih povezav in zank rečemo \emph{enostaven graf}.
@@ -136,9 +133,12 @@ Paziti je bilo potrebno na par posebnih primerov, kot npr. razbitje že lihega g
 \section{Analiza posebnih grafov}
 
 \subsection{Mali grafi}
+\emph{decomposition/small\_graphs.py}
+\\
 
 Prva stvar, ki nas je zanimala, je bila kolikšen delež grafov na malem številu oglišč je možno razbiti na dva liha grafa.
 Grafe smo zgenerirali tako, da smo za vsak $n$ sestavili množico vseh možnih povezav v grafu, potem pa sestavili njeno potenčno množico.
+Iz te skupine grafov smo nato še odstranili vse grafe z izoliranimi vozlišči, saj so to efektivno grafi na manj vozliščih.
 Nato smo vsak tako dobljen graf poskusili razbiti in le prešteli, za koliko grafov je bilo to možno.
 \\
 
@@ -149,12 +149,22 @@ na primernih mestih uporabili sete oz. generatorje, in na začetku preverili ali
 
 To ni bilo dovolj, ocenjeni čas je zmanjšalo le na približno $70h$. Sedaj bi lahko poskusili algoritem še izboljšati z uporabo nižjenivojskega jezika in bolj
 primernih podatkovnih struktur, kar pa bi nam lahko vzelo precej več dela. Namesto tega, smo se odločili, da bomo le uporabili malo več procesorske moči. Primerno
-smo razbili našo testno množico in paralelizirali razbitja. Tako smo na enem samem osemjedrnem računalniku s 14 nitmi prišli do tega, da je izračun trajal "le" $4.5h$.
+smo razbili našo testno množico in paralelizirali razbitja z uporabo knjižnice \emph{joblib}.
+Tako smo na enem samem osemjedrnem računalniku s 14 nitmi prišli do tega, da je izračun trajal "le" $4.5h$.
 \\
 
-Rezultate testov predstavimo v tabeli in pa v grafih:
-
-
+\noindent Rezultate testov predstavimo v tabeli in pa v grafih:
+\begin{table}[h]
+\begin{tabular}{|l|l|l|l|l|}
+\hline
+\textbf{število vozlišč} & \textbf{število grafov} & \textbf{število uspešnih} & \textbf{uspešnost} & \textbf{čas izvajanja} \\ \hline
+3           & 8            & 3                & 37.50 \%     & 0.82 s         \\ \hline
+4           & 64           & 35               & 54.68 \%     & 0.49 s         \\ \hline
+5           & 1024         & 345              & 33.69 \%     & 0.66 s         \\ \hline
+6           & 32768        & 19894            & 60.71 \%     & 3.36 s         \\ \hline
+7           & 2097152      & 638967           & 30.47 \%    & 144 s          \\ \hline
+\end{tabular}
+\end{table}
 
 \subsection{Dvodelni grafi}
 \subsection{Drevesa in gozdovi}
